--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My First App</title>
+        <title>IRC Reporter</title>
         <link rel="stylesheet" href="sp://import/css/adam.css">
-        <link rel="stylesheet" href="tutorial.css">
         <script src="/socket.io.js" type="text/javascript"></script>
     </head>
     <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();">
         <h1 id="header">Hello, world!</h1>
+        <br />
+        <img src="/nicolas.jpg" />
     </body>
 </html>
