--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <title>IRC Reporter</title>
         <link rel="stylesheet" href="sp://import/css/adam.css">
         <script src="/socket.io.js" type="text/javascript"></script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> -->
     </head>
     <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();">
-        <img src="/nicolas.jpg" />
+        <!-- <img src="/nicolas.jpg" /> -->
+        <div id="img_goes_here"></div>
     </body>
 </html>
