added mysql database connection to store song plays

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <form name="connect" method="" action="">
             Port: <input type="text" name="port_num" id="port_num" value="8090" />
-            <input type="button" name="connect_submit" id="connect_submit" value="Connect" />
+            <input type="button" name="connect_submit" id="connect_submit" value="Connect" /> OR <input type="button" name="autoconnect" id="autoconnect" value="Auto-Connect" />
         </form>
         <br />
         <div id="img_goes_here"></div>
