executive decision: socket.io is overkill; doesn't offer enough benefits to justify its use. will henceforth only support the POST method of communication betwixt app and server.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta charset="utf-8">
         <title>IRC Reporter</title>
         <link rel="stylesheet" href="sp://import/css/adam.css">
-        <script src="/socket.io.js" type="text/javascript"></script>
+        <!-- <script src="/socket.io.js" type="text/javascript"></script> -->
     </head>
     <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();">
-        <div id="connection_status" style="color:red;">
-            <i>Disconnected</i>
-        </div>
-        <form name="connect" method="" action="">
-            Port: <input type="text" name="port_num" id="port_num" value="8090" />
-            <input type="button" name="connect_submit" id="connect_submit" value="Connect" /> OR <input type="button" name="autoconnect" id="autoconnect" value="Auto-Connect" />
-        </form>
-        <br />
-        <div id="img_goes_here"></div>
+        <!-- <div id="connection_status" style="color:red;"> -->
+        <!--     <i>Disconnected</i> -->
+        <!-- </div> -->
+        <!-- <form name="connect" method="" action=""> -->
+        <!--     Port: <input type="text" name="port_num" id="port_num" value="8090" /> -->
+        <!--     <input type="button" name="connect_submit" id="connect_submit" value="Connect" /> OR <input type="button" name="autoconnect" id="autoconnect" value="Auto-Connect" /> -->
+        <!-- </form> -->
+        <!-- <br /> -->
+        <div id="img_goes_here" style="margin:20px;"></div>
     </body>
 </html>
