fixed sum stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="sp://import/css/adam.css">
     </head>
     <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();">
+        <input type="text" id="port_num" value="8090" />
         <div id="img_goes_here" style="margin:20px;"></div>
     </body>
 </html>
