--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>IRC Reporter</title>
         <link rel="stylesheet" href="sp://import/css/adam.css">
     </head>
-    <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();">
+    <body onload="sp = getSpotifyApi(1); irssi = sp.require('irssi'); irssi.init();" style="background:url(bg.jpg);height:100%;width:100%;">
         <input type="text" id="port_num" value="8090" />
         <div id="img_goes_here" style="margin:20px;"></div>
     </body>
